codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__exploring_step2_finish_ls.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: active_blob(&chat)
---

CODEX · Tool Call
┊ ✓ Explored · 5ms · 0 lines · Ctrl+T details
