codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__exploring_step6_finish_cat_bar.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: active_blob(&chat)
---

CODEX · Tool Call
┊ ✓ Explored · 4 commands · 20ms · 3 lines · Ctrl+T details
