codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__final_worked_for_uses_cumulative_turn_duration.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
assertion_line: 1032
expression: combined
---

CODEX · Tool Calls

┊ ✓ echo preparing


CODEX
  Final response.

  Worked for [duration] · [completion time]
